# doc-anonymizer

./: .gitignore  AnonymizerPro.spec  CHANGELOG.md  MANUAL.md  README.md  STACK.md  architecture.drawio  build_exe.py  debug_extract.py  design_instructions.json  design_instructions_utf8.json  instructions_apply.json  instructions_design.json  instructions_proposal.json  instructions_specs.json  instructions_tasks.json  mini_manual.md  proposal_instructions.json  proposal_instructions_utf8.json  pyproject.toml  requirements.txt  skills-lock.json  specs_instructions.json  specs_instructions_utf8.json  tasks_instructions.json  tasks_instructions_utf8.json  test.py  test_money.py
.agent/workflows/: git-save.md
.agents/workflows/: revision-gral.md
anonymizer/: cli.py  config.py  diagnostics.py  gui.py  known_entities.py  mapping.py  matcher.py  models.py  regex_editor.py  replacer.py  review.py  utils.py
anonymizer/detectors/: amounts.py  detector.py  ner.py  patterns.py
anonymizer/extractors/: docx_extractor.py  pdf_extractor.py
docs/: CHANGELOG.md  MANUAL.md  Notas_y_planificación.md  mini_manual.html  mini_manual.md
mappings/: demo_mapeo.json  desayunos_mapeo.json
openspec/: config.yaml
sample_docs/: carta1_mapeo.xlsx  carta_oferta_4_mapeo_permanente.xlsx  prueba_2_test_mapeo.xlsx  test_montos_mapeo.xlsx
scripts/: AnonymizerPro.spec  build_exe.py  build_installer.bat  doc-anonymizer.iss  run_diagnostics.py
tests/: test_amounts.py  test_deanonymize.py  test_docx_sanitization.py  test_ensayo.py  test_mapping_auto.py  test_spacy_model_validation.py
(+142 files in other folders)
